add new settings